--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.9",
     "@bugsnag/browser-performance": "^2.9.1",
     "@bugsnag/js": "^8.0.0",
     "@bugsnag/plugin-react": "^8.0.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@sentry/nextjs": "^8",
+    "ai": "^4.1.18",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
+    "lucide-react": "^0.474.0",
     "next": "14.2.4",
+    "ollama-ai-provider": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
